# Simple-ROS-Planar-Segmentator

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: simple_planar_segmentator.launch
msg/: Plane.msg
src/: planar_segmentator.cpp
srv/: PlaneDetection.srv
